# xy

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  hatch_build.py  package-lock.json  package.json  pyproject.toml  skills-lock.json
.claude/: launch.json
.github/workflows/: _build-docs-images.yml  ci.yml  (+8 more)
benchmarks/: README.md  __init__.py  _browser.py  _cdp.py  _fastcharts_browser.py  _launch_interactive.py  _launch_static.py  _launch_webagg.py  _xy_browser.py  baseline.json  bench.py  bench_2d_charts.py  bench_animation.py  bench_client_transport_quick_wins.py  bench_dashboard.py  bench_density_normalization.py  bench_heatmap_native.py  bench_heatmap_wire.py  bench_hexbin_client.py  bench_install.py  bench_interaction.py  bench_launch_scatter.py  bench_line.py  bench_native.py  bench_native_vs_agg.py  bench_pyplot_vs_matplotlib.py  bench_raw_scatter.py  bench_scatter_native.py  bench_served_view_memo.py  bench_transport.py  bench_vs.py  bench_workflows.py  categories.py  environment.py  requirements-ci.in  test_codspeed_animation.py  test_codspeed_kernels.py  test_codspeed_pyplot.py  test_codspeed_restyle.py  test_codspeed_selection.py  (+1 more)
benchmarks/launch_baselines/xy-0.1.0/macos-arm64-m5-pro/: cpu-fallback-results.json  default-results.json  environment.json  manifest.json  pyproject.toml  report.md  requirements.txt
docs/: api-examples.md  benchmark.md  benchmark_metrics.md  chart-kind-contract.md  chart-roadmap.md  contributing.md  design-dossier.md  getting-started.md  index.md  matplotlib-compat-changelog.md  matplotlib-compat-matrix.md  matplotlib-compat.md  matplotlib-shim-todo.md  production-readiness.md  quant-finance-roadmap.md  security-audit-2026-07-06.md  styling.md
docs/app/: .dockerignore  .gitignore  AGENTS.md  README.md  pyproject.toml  rxconfig.py
docs/app/assets/: fonts.css  styles.css  tailwind-theme.css
docs/app/dockerfiles/: backend.Dockerfile  caddy.Dockerfile
docs/app/reflex.lock/: package.json
docs/app/scripts/: check_html_routes.py  check_markdown_assets.py  check_sitemap.py
docs/app/tests/: test_agent_files.py  test_docs_site.py  test_framework_integration_examples.py  test_navigation.py  test_prerender.py
docs/app/xy_docs/: __init__.py  api_reference.py  breadcrumb.py  code.py  components.py  config.py  constants.py  examples.py  footer.py  gallery.py  markdown.py  markdown_components.py  navbar.py  navigation.py  playground.py  plugins.py  prerender.py  sidebar.py  xy_docs.py
docs/app/xy_docs/demos/: __init__.py  benchmark_charts.py  instrument_sans_density.py  xy_sdf_plots.py
examples/: demo-advance.ipynb  demo.ipynb  echarts.ipynb  matplotlib_shim.ipynb  symlog_axis.ipynb
examples/fastapi/: .gitignore  README.md  app.py  charts.py  live_drilldown.py  pyproject.toml
examples/osm/osmium-rs/: Cargo.toml  README.md
examples/osm/osmium-rs/src/: lib.rs  main.rs  sort.rs  sort_main.rs
js/: build.mjs  tsconfig.json
python/reflex-xy/: README.md  pyproject.toml
python/reflex-xy/examples/demo_app/: .gitignore  README.md  requirements.txt  rxconfig.py
python/reflex-xy/examples/demo_app/demo_app/: demo_app.py
python/reflex-xy/reflex_xy/: __init__.py  app.py  component.py  events.py  namespace.py  payload_asset.py  registry.py  selections.py  state_bridge.py  tokens.py  vars.py
python/reflex-xy/reflex_xy/assets/: XYChart.jsx  __init__.py  xy_client.js
python/reflex-xy/tests/: conftest.py  reflex_xy_test_helpers.py  test_assets.py  test_async_figure_var.py  test_component.py  test_figure_var.py  test_payload_asset.py  test_registry.py  test_selections.py  test_socket_data_plane.py  test_state_bridge.py  test_tokens.py
reflex_fastcharts_app/: README.md  requirements.txt
scripts/: _app_smoke.py  _protocol.py  abi_smoke.py  animation_smoke.py  append_stream_smoke.py  bench.py  bench_dashboard.py  bench_interaction.py  bench_native.py  bench_pyplot_vs_matplotlib.py  bench_scatter_native.py  bench_vs.py  browser_conformance.mjs  chart_kind_matrix.py  check_claim_guardrails.py  check_public_api.py  check_pyplot_options.py  check_python_floor.py  check_regressions.py  check_release_version.py  check_required_jobs.py  check_testing_spec.py  coverage_ratchet.py  dependency_audit.py  fastapi_host_smoke.py  gen_font.py  host_integration_policy.py  interaction_stress_smoke.py  merge_benchmark_reports.py  native_parity.py  pan_zoom_matrix.mjs  pick_boundary_smoke.py  png_export_smoke.py  pyodide_load_smoke.py  reflex_lifecycle_smoke.py  reflex_ws_smoke.py  release_provenance.py  rename_fc_to_xy.py  render_smoke_nonumpy.py  run_pytest_no_skips.py  (+15 more)
spec/: README.md  api-examples.md  benchmark.md  chart-roadmap.md  contributing.md  design-dossier.md  matplotlib-shim-todo.md  production-readiness.md  security-audit-2026-07-06.md  styling.md
src/: css.rs  font.rs  kernels.rs  lib.rs  raster.rs  simd.rs  svg.rs  tiles.rs
tests/: conftest.py  test_accessibility_contract.py  test_animation.py  test_animation_smoke.py  test_api_parity.py  test_arrow_ingest.py  test_arrowgeom.py  test_batch_export.py  test_bench_pyplot_vs_matplotlib.py  test_bench_transport.py  test_bench_vs.py  test_benchmark_environment.py  test_benchmark_requirements.py  test_browser_conformance.py  test_candlestick.py  test_channel.py  test_chart_kind_matrix.py  test_check_pyplot_options.py  test_check_regressions.py  test_check_release_version.py  test_check_required_jobs.py  test_check_testing_spec.py  test_claim_guardrails.py  test_client_steady_state.py  test_client_transport_quick_wins.py  test_components.py  test_context_loss_preserves_view.py  test_coverage_ratchet.py  test_css_mark_styles.py  test_css_validation.py  test_declarative_colorbar.py  test_density_config.py  test_density_mean_color.py  test_density_pan_no_rebin.py  test_density_physical_alpha.py  test_density_request_economy.py  test_density_sample_pending_holds.py  test_density_sample_resolvability_gate.py  test_density_sample_zoomout_fades.py  test_density_shader_normalization.py  (+85 more)
(+507 files in other folders)
