[package]
name = "fastcharts-core"
version = "0.1.0"
edition = "2021"
description = "Native compute core for the fastcharts engine: zone maps, offset-encoded f32, M4 decimation"
license = "Apache-2.0"

# Zero external dependencies, deliberately (design dossier §33): the core builds
# with nothing but the Rust std library, so no registry access, no supply chain,
# and a plain C ABI. One cdylib per platform covers every CPython version —
# stronger than abi3 (no Python ABI at all). Python binds via ctypes with
# zero-copy NumPy pointers.
[lib]
name = "fastcharts_core"
crate-type = ["cdylib", "rlib"]

[dependencies]

[profile.release]
lto = "thin"
codegen-units = 1
