[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastcharts"
version = "0.1.0"
description = "A faster charting engine: native Rust core, binary columnar transport, GPU render client"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "numpy>=1.24",
    "anywidget>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.8",
    "ty",
]

[tool.hatch.build.targets.wheel]
packages = ["python/fastcharts"]
dev-mode-dirs = ["python"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.sdist]
include = ["python", "src", "js/src", "Cargo.toml", "Cargo.lock", "hatch_build.py", "README.md"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["python", "tests", "scripts", "benchmarks"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "UP",            # pyupgrade
    "B",             # bugbear
    "SIM",           # simplify
    "RUF",
]
ignore = [
    "E501",   # line length is the formatter's job
    # Stylistic churn we opt out of (newer-ruff additions; the codebase keeps
    # explicit typing.Optional/Union in some public-facing modules for clarity,
    # and unicode ×/– in prose comments is intended):
    "UP007",  # Union[X, Y] -> X | Y
    "UP037",  # quoted annotations
    "UP045",  # Optional[X] -> X | None
    "RUF002", # ambiguous unicode in docstrings
    "RUF003", # ambiguous unicode in comments
    "RUF005", # list concatenation vs unpacking
    "RUF046", # int() on already-int
    "RUF059", # unused unpacked variable (tests unpack payloads for clarity)
    "RUF100", # unused noqa (kept for editors running broader rule sets)
]

[tool.ty.environment]
python = ".venv"

[tool.ty.src]
# Type-check the shippable library; tests/scripts/benchmarks use dynamic
# patterns (ctypes, deliberately subscripting known-non-None Optionals) that a
# pre-1.0 checker flags as false positives.
include = ["python"]

[tool.pytest.ini_options]
testpaths = ["tests"]
