[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xy"
version = "0.1.0"
description = "Experimental Python charting engine with a native Rust core, binary columnar transport, and a GPU render client"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "numpy>=1.24",
    "anywidget>=0.9",
]

[project.urls]
Repository = "https://github.com/reflex-dev/xy"
Issues = "https://github.com/reflex-dev/xy/issues"
Changelog = "https://github.com/reflex-dev/xy/blob/main/CHANGELOG.md"
Security = "https://github.com/reflex-dev/xy/blob/main/SECURITY.md"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff==0.15.8",
    "ty",
    "hypothesis>=6",
    # Optional *input* format, never a runtime dependency: the Arrow ingest
    # tests importorskip it, so it lives in dev where CI exercises them.
    "pyarrow>=15",
]
# Cross-library comparison charts (scripts/bench_vs.py three-way benchmark,
# notebook side-by-sides). Kept out of `dev` so the main test/CI install stays
# lean; opt in with `uv pip install -e ".[bench]"`.
bench = [
    "plotly>=5",
    "matplotlib>=3",
]
# CodSpeed's pytest plugin is intentionally separate from the normal dev
# environment: it is useful for performance runs, but is not needed for unit
# tests or static analysis.
codspeed = [
    "pytest-codspeed>=5,<6",
]

[tool.hatch.build.targets.wheel]
packages = ["python/xy"]
dev-mode-dirs = ["python"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.sdist]
include = [
    ".github/workflows/ci.yml",
    ".github/workflows/codspeed.yml",
    ".github/workflows/release.yml",
    "python",
    "src",
    "js/src",
    "benchmarks",
    "docs",
    "examples/reflex/README.md",
    "examples/reflex/requirements.txt",
    "examples/reflex/rxconfig.py",
    "examples/reflex/reflex_xy_app/*.py",
    "examples/reflex/scripts/build_charts.py",
    "examples/reflex/assets/charts/*.html",
    "scripts",
    "tests",
    "Cargo.toml",
    "Cargo.lock",
    "hatch_build.py",
    "Makefile",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "SECURITY.md",
    "CONTRIBUTING.md",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["python", "tests", "scripts", "benchmarks"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "UP",            # pyupgrade
    "B",             # bugbear
    "SIM",           # simplify
    "RUF",
]
ignore = [
    "E501",   # line length is the formatter's job
    # Stylistic churn we opt out of (newer-ruff additions; the codebase keeps
    # explicit typing.Optional/Union in some public-facing modules for clarity,
    # and unicode ×/– in prose comments is intended):
    "UP007",  # Union[X, Y] -> X | Y
    "UP037",  # quoted annotations
    "UP045",  # Optional[X] -> X | None
    "RUF002", # ambiguous unicode in docstrings
    "RUF003", # ambiguous unicode in comments
    "RUF005", # list concatenation vs unpacking
    "RUF046", # int() on already-int
    "RUF059", # unused unpacked variable (tests unpack payloads for clarity)
    "RUF100", # unused noqa (kept for editors running broader rule sets)
]

[tool.ruff.lint.per-file-ignores]
# This legacy notebook imports the historical `fastcharts` demo alias. Ruff's
# first-party classification differs between the editable CI environment and
# the local checkout, so import ordering is not a stable check for this file.
"examples/demo.ipynb" = ["I001"]

[tool.ty.environment]
python = ".venv"

[tool.ty.src]
# Type-check the shippable library; tests/scripts/benchmarks use dynamic
# patterns (ctypes, deliberately subscripting known-non-None Optionals) that a
# pre-1.0 checker flags as false positives.
include = ["python"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Repo root on sys.path so tests can import the `benchmarks` package even when
# pytest is invoked as a bare binary (CI does `.venv/bin/pytest`, which —
# unlike `python -m pytest` — does not put the CWD on sys.path).
pythonpath = ["."]
