[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xy"
version = "0.1.0"
description = "Experimental Python charting engine with a native Rust core, binary columnar transport, and a GPU render client"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "numpy>=1.24",
    "anywidget>=0.9",
]

[project.urls]
Repository = "https://github.com/reflex-dev/xy"
Issues = "https://github.com/reflex-dev/xy/issues"
Changelog = "https://github.com/reflex-dev/xy/blob/main/CHANGELOG.md"
Security = "https://github.com/reflex-dev/xy/blob/main/SECURITY.md"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff==0.15.8",
    "ty",
    "hypothesis>=6",
    # Optional *input* format, never a runtime dependency: the Arrow ingest
    # tests importorskip it, so it lives in dev where CI exercises them.
    "pyarrow>=15",
]
# Plotly comparison charts. Matplotlib is deliberately not a project extra:
# benchmark jobs that compare against it install it explicitly as an external
# baseline, while every xy install remains independent of Matplotlib.
bench = [
    "plotly>=5",
]
# CodSpeed's pytest plugin is intentionally separate from the normal dev
# environment: it is useful for performance runs, but is not needed for unit
# tests or static analysis.
codspeed = [
    "pytest-codspeed>=5,<6",
]

[tool.hatch.build.targets.wheel]
packages = ["python/xy"]
dev-mode-dirs = ["python"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.sdist]
include = [
    ".github/workflows/ci.yml",
    ".github/workflows/codspeed.yml",
    ".github/workflows/release.yml",
    # The xy package only — python/reflex-xy is its own distributable
    # (own pyproject, depends on reflex) and must not ride in this sdist;
    # scripts/verify_sdist.py enforces both the no-reflex-dependency rule
    # and the ban on its reflex.lock frontend pins.
    "python/xy",
    "src",
    "js/src",
    "benchmarks",
    "docs",
    "examples/reflex/README.md",
    "examples/reflex/requirements.txt",
    "examples/reflex/rxconfig.py",
    "examples/reflex/reflex_xy_app/*.py",
    "examples/reflex/scripts/build_charts.py",
    "examples/reflex/assets/charts/*.html",
    "scripts",
    "tests",
    "Cargo.toml",
    "Cargo.lock",
    "hatch_build.py",
    "Makefile",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "SECURITY.md",
    "CONTRIBUTING.md",
]
exclude = [
    "/docs/app/**",
    "/.*-venv/**",
    "/.venv/**",
    "/venv/**",
    "/.tox/**",
    "/.nox/**",
    "/.pytest_cache/**",
    "/.ruff_cache/**",
    "/node_modules/**",
    "/target/**",
    "/dist/**",
    # Adapter tests ship with the reflex-xy package's repo checkout, not
    # with the xy sdist (whose package they can't exercise anyway).
    "/tests/reflex_adapter/**",
    # Belt and braces for the include narrowing above: hatchling auto-admits
    # readme-named files, which would smuggle adapter docs back in.
    "/python/reflex-xy/**",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["python", "tests", "scripts", "benchmarks"]
extend-exclude = ["docs/app"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "UP",            # pyupgrade
    "B",             # bugbear
    "SIM",           # simplify
    "RUF",
]

ignore = [
    "E501",   # line length is the formatter's job
    # Stylistic churn we opt out of (newer-ruff additions; the codebase keeps
    # explicit typing.Optional/Union in some public-facing modules for clarity,
    # and unicode ×/– in prose comments is intended):
    "UP007",  # Union[X, Y] -> X | Y
    "UP037",  # quoted annotations
    "UP045",  # Optional[X] -> X | None
    "RUF002", # ambiguous unicode in docstrings
    "RUF003", # ambiguous unicode in comments
    "RUF005", # list concatenation vs unpacking
    "RUF046", # int() on already-int
    "RUF059", # unused unpacked variable (tests unpack payloads for clarity)
    "RUF100", # unused noqa (kept for editors running broader rule sets)
]

[tool.ruff.format]
# The dual-engine PDSH notebooks mirror each cell verbatim across the two
# plotting aliases (mpl_plt/xy_plt). The aliases differ in length, so a line
# near the width limit wraps in one copy and not the other — the formatter and
# sync_dual_engine_notebooks.py --check can never both pass. The sync script
# owns these files' layout.
exclude = ["examples/pdsh/*.ipynb"]

[tool.ruff.lint.per-file-ignores]
# Third-party example code (PDSH notebooks): kept faithful to upstream, so
# upstream's import placement and naming style is not ours to lint. F811: the
# dual-engine layout mirrors every cell (matplotlib then xy), so imports and
# helper defs repeat by design.
"examples/pdsh/*.ipynb" = ["E402", "E731", "E741", "F401", "F811", "I001", "UP030", "UP032", "B007"]
# Reflex state classes declare mutable defaults by design (reflex deep-copies
# them per instance); the demo heading's unicode × is intentional prose.
"python/reflex-xy/examples/**" = ["RUF012", "RUF001"]
"tests/reflex_adapter/*.py" = ["RUF012"]

[tool.ruff.lint.isort]
known-first-party = ["fastcharts", "xy"]

[tool.ty.environment]
python = ".venv"

[tool.ty.src]
# Type-check the shippable library; tests/scripts/benchmarks use dynamic
# patterns (ctypes, deliberately subscripting known-non-None Optionals) that a
# pre-1.0 checker flags as false positives. The reflex demo app is excluded
# for the same reason: reflex state vars are Vars at class scope (`.length()`
# etc.), which a plain `dict` annotation can't express.
include = ["python"]
exclude = ["python/reflex-xy/examples"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Repo root on sys.path so tests can import the `benchmarks` package even when
# pytest is invoked as a bare binary (CI does `.venv/bin/pytest`, which —
# unlike `python -m pytest` — does not put the CWD on sys.path).
pythonpath = ["."]
