[project]
name = "xy-docs"
version = "0.1.0"
description = "The documentation site for xy"
requires-python = ">=3.11"
dependencies = [
    "reflex>=0.9.6,<0.10",
    "reflex-components-code>=0.9,<0.10",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["xy_docs"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF", "SIM", "UP", "W"]
