[project]
name = "xy-docs-app"
version = "0.1.0"
description = "Documentation site for XY."
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pillow",
    "reflex @ git+https://github.com/reflex-dev/reflex@carlos/reusable-docs-components",
    "reflex-components-internal @ git+https://github.com/reflex-dev/reflex@carlos/reusable-docs-components#subdirectory=packages/reflex-components-internal",
    "reflex-docgen @ git+https://github.com/reflex-dev/reflex@carlos/reusable-docs-components#subdirectory=packages/reflex-docgen",
    "reflex-xy",
    "reflex-site-shared @ git+https://github.com/reflex-dev/reflex@carlos/reusable-docs-components#subdirectory=packages/reflex-site-shared",
    "xy",
]

[dependency-groups]
dev = [
    "codespell",
    "pre-commit",
    "pytest",
    "ruff",
]

[tool.uv.sources]
reflex-xy = { path = "../../python/reflex-xy", editable = true }
xy = { path = "../..", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["xy_docs"]

[tool.ruff]
target-version = "py311"
output-format = "concise"

[tool.ruff.lint]
select = [
    "B",
    "C4",
    "D",
    "E",
    "F",
    "FURB",
    "I",
    "N",
    "PERF",
    "PGH",
    "RUF",
    "SIM",
    "T",
    "TRY",
    "W",
]
ignore = [
    "D100",
    "D104",
    "E501",
]
allowed-confusables = ["’"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
preview = true

[tool.codespell]
skip = "*/.venv/*,*/.web/*,*/assets/external/*,*/assets/xy/*,*/reflex.lock/*,*/uv.lock"
ignore-words-list = "inout"

[tool.uv]
required-version = ">=0.7.0"
