[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reflex-xy"
version = "0.1.0"
description = "Reflex integration for xy: WebGL charts over the app's own websocket"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "xy",
    # Prototype dependency surface. The adapter needs: Component/Var/EventHandler
    # (reflex-base), plus App/State/state_manager access, which today live in the
    # full `reflex` distribution. Revisit when the reflex-base split grows a
    # public state/app surface (docs/design/reflex-integration.md §4).
    "reflex>=0.9.6",
]

[project.optional-dependencies]
# tests/reflex_adapter drives the data plane over a real websocket:
# uvicorn serves the socket app, aiohttp backs socketio.AsyncClient.
dev = [
    "aiohttp>=3.9",
    "uvicorn>=0.23",
]

[project.urls]
Repository = "https://github.com/reflex-dev/xy"

[tool.hatch.build.targets.wheel]
packages = ["reflex_xy"]

[tool.hatch.build.targets.wheel.force-include]
# The render client is a build artifact synced from the xy repo
# (node js/build.mjs); ship whatever is committed here.
"reflex_xy/assets/xy_client.js" = "reflex_xy/assets/xy_client.js"
"reflex_xy/assets/XYChart.jsx" = "reflex_xy/assets/XYChart.jsx"
