[project]
name = "xy-launch-scatter-baseline"
version = "0.1.0"
requires-python = "==3.14.*"
dependencies = [
    "xy",
    "kaleido==1.3.0",
    "matplotlib==3.11.0",
    "numpy==2.5.1",
    "pandas==3.0.3",
    "pillow==12.3.0",
    "plotly==6.9.0",
    "psutil==7.2.2",
    "tornado==6.5.7",
    "websocket-client==1.9.0",
]

[tool.uv.sources]
xy = { path = "../../../..", editable = true }
